syntax = "proto3";
package TournamentAssistantShared.Models.Packets;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

import "preview_beatmap_level.proto";

message ForwardingPacket {
	PreviewBeatmapLevel level = 1;
}